--- a/SquareShooter/SquareShooter/Info.plist
+++ b/SquareShooter/SquareShooter/Info.plist
@@ -28,5 +28,9 @@
 	<array>
 		<string>arm64</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Arial Rounded Bold.ttf</string>
+	</array>
 </dict>
 </plist>
